force-app/main/default/objects/Quote__c/fields/QuoteLineDiscount__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineDiscount__c</fullName>
    <label>Quote Line Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>