force-app/main/default/objects/Quote__c/fields/QuoteLineSubtotal__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineSubtotal__c</fullName>
    <label>QuoteLineSubtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>