force-app/main/default/objects/Quote__c/fields/SubsTotal__c.field-meta.xml
<CustomField>
    <fullName>SubsTotal__c</fullName>
    <label>SubsTotal</label>
    <summarizedField>QuoteLineItem__c.TotalPrice__c</summarizedField>
    <summaryForeignKey>QuoteLineItem__c.QuoteId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>