force-app/main/default/objects/Quote__c/recordTypes/Quote_Item.recordType-meta.xml
<RecordType>
    <fullName>Quote_Item</fullName>
    <active>true</active>
    <label>Quote Item</label>
</RecordType>