force-app/main/default/objects/Quote__c/validationRules/Primary_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Quote</fullName>
    <active>false</active>
    <errorConditionFormula>OR(AND(
    ISCHANGED(Primary__c), GrandTotal__c &gt; (Account_Name__r.HMC_Credit_Limit__c + Advance_Amount__c)),
AND(
    ISCHANGED(Primary__c), GrandTotal__c &gt; (Account_Name__r.HMC_Credit_Limit__c ))
)</errorConditionFormula>
    <errorMessage>Please complete payment</errorMessage>
</ValidationRule>