force-app/main/default/objects/Quote__c/validationRules/validate_Expiration_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_Expiration_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.Name = &apos;Quote&apos;,
    ISBLANK(ExpirationDate__c)
)</errorConditionFormula>
    <errorMessage>Enter Expiration Date</errorMessage>
</ValidationRule>