force-app/main/default/objects/Quote__c/validationRules/validate_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.Name = &apos;Quote&apos;,
    ISBLANK( Opportunity__c )
)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>Enter Opportunity Name</errorMessage>
</ValidationRule>